# cratedb-toolkit

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  codecov.yml  pyproject.toml  renovate.json5  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cratedb-cloud.yml  dynamodb.yml  influxdb.yml  kinesis.yml  main.yml  mongodb.yml  nlsql.yml  oci.yml  postgresql.yml  pymongo.yml  release-app.yml  release-oci-full.yml  release-oci-ingest.yml  release-oci.yml  release-pypi.yml
cratedb_retention/: cli.py  core.py  model.py  store.py
cratedb_retention/setup/: schema.py  schema.sql
cratedb_retention/strategy/: delete.py  delete_tasks.sql  policy.sql  reallocate.py  reallocate_tasks.sql  snapshot.py  snapshot_tasks.sql
cratedb_retention/util/: cli.py  common.py  data.py  database.py
cratedb_retentions/: cli.py
cratedb_retentions/setup/: schema.py
cratedb_retentions/strategy/: delete.py  delete_policies.sql
cratedb_retentions/util/: cli.py  common.py
cratedb_rollup/: cli.py  core.py  model.py
cratedb_rollup/setup/: schema.py  schema.sql
cratedb_rollup/strategy/: delete.py  delete_tasks.sql  reallocate.py  reallocate_tasks.sql  snapshot.py  snapshot_tasks.sql
cratedb_rollup/util/: cli.py  common.py  database.py
cratedb_toolkit/: __init__.py  cli.py  config.py  exception.py  model.py  option.py  options.py
cratedb_toolkit/api/: __init__.py  cli.py  guide.py  main.py  model.py
cratedb_toolkit/cfr/: README.md  backlog.md  cli.py  info.py  jobstats.py  marimo.py  systable.py
cratedb_toolkit/cluster/: cli.py  compute.py  core.py  croud.py  guide.py  model.py  util.py
cratedb_toolkit/datasets/: README.md  __init__.py  core.py  kaggle.py  model.py  store.py  tutorial.py  util.py
cratedb_toolkit/dms/: cli.py  table_mapping.py
cratedb_toolkit/docs/: cli.py  functions.py  model.py  settings.py  util.py
cratedb_toolkit/iac/: aws.py
cratedb_toolkit/info/: cli.py  core.py  http.py  job.py  library.py  model.py
cratedb_toolkit/io/: README.md  cli.py  core.py  croud.py  deltalake.py  exception.py  hub.py  iceberg.py  influxdb.py  router.py  sql.py  util.py
cratedb_toolkit/job/: cli.py  croud.py
cratedb_toolkit/materialized/: core.py  model.py  readme.md  schema.py  schema.sql  store.py
cratedb_toolkit/meta/: release.py
cratedb_toolkit/query/: cli.py
cratedb_toolkit/retention/: cli.py  core.py  store.py
cratedb_toolkit/settings/: cli.py  compare.py
cratedb_toolkit/shell/: cli.py
cratedb_toolkit/sqlalchemy/: __init__.py  patch.py  polyfill.py
cratedb_toolkit/testing/: pytest.py
cratedb_toolkit/util/: __init__.py  app.py  basic.py  cli.py  client.py  common.py  config.py  cr8.py  crash.py  croud.py  data.py  data_dict.py  database.py  date.py  format.py  io.py  pandas.py  platform.py  process.py  runtime.py  service.py  setting.py  sqlalchemy.py
cratedb_toolkit/wtf/: README.md  backlog.md  cli.py  core.py  http.py  library.py  model.py  query_collector.py  recorder.py  util.py
dags/: data_retention_delete_dag.py  data_retention_reallocate_dag.py  data_retention_snapshot_dag.py
doc/: backlog.md  bugs.md  conf.py  datasets.md  docs-api.md  index.md  install.md  release.md  retention.md  sandbox.md
doc/_extra/: robots.txt
doc/_snippet/: cloud-prerequisites.md  ingest-see-also.md  install-ctk.md  links.md
doc/adapter/: index.md  pymongo.md  rockset.md
doc/admin/: index.md
doc/backlog/: cfr.md  index.md  info.md  io.md  main.md
doc/cfr/: backlog.md  index.md  info.md  jobstats.md  systable.md
doc/cluster/: _address.md  backlog.md  cli.md  index.md  python.md  tutorial.md
doc/cmd/: index.md  tail.md
doc/info/: index.md
doc/io/: _cratedb-options.md  _db-options.md  _install-curated.md  _install-ingest.md  index.md
doc/query/: convert.md  index.md
doc/settings/: index.md
doc/util/: index.md  settings.md  shell.md  tail.md
doc/wtf/: backlog.md  index.md
examples/: basic.py  cloud_cluster.py  cloud_import.ipynb  cloud_import.py  edit.py  full.py  materialized_view.py  pymongo_adapter.py  retention_edit.py  retention_retire_cutoff.py  retire_cutoff.py
examples/aws/: dynamodb_kinesis_lambda_oci_cratedb.py  kinesis_put.py
examples/cdc/: compose.yaml
examples/notebook/: cloud_import.ipynb
examples/python/: cloud_cluster.py  cloud_import.py  retention_retire_cutoff.py
examples/shell/: cloud_cluster.sh  cloud_import.sh
examples/tikray/: tikray-int64-to-timestamp.yaml  tikray-mongodb-json-files.yaml  tikray-transformation.yaml  tikray-treatment-all.yaml  tikray-treatment-ignore.yaml
examples/zyp/: zyp-int64-to-timestamp.yaml  zyp-mongodb-json-files.yaml  zyp-transformation.yaml  zyp-treatment-all.yaml  zyp-treatment-ignore.yaml
include/: data_retention_retrieve_delete_policies.sql  data_retention_retrieve_reallocate_policies.sql  data_retention_retrieve_snapshot_policies.sql
release/oci/: Dockerfile  selftest.sh  test.yml
release/oci-full/: Dockerfile  selftest.sh  test.yml
release/oci-ingest/: Dockerfile  overrides.txt  selftest.sh  test.yml
setup/: data_retention_schema.sql
tests/: conftest.py  test_cli.py  test_core.py  test_database.py  test_examples.py  test_model.py  test_shell.py  test_store.py
tests/adapter/: test_pymongo.py  test_rockset.py
tests/admin/: test_active_shard_monitor.py  test_cli.py  test_distribution_analyzer.py  test_problematic_translogs.py  test_recovery_monitor.py
tests/api/: test_cli.py  test_guide.py  test_util.py
tests/cfr/: test_cli.py  test_info.py  test_jobstats.py  test_systable.py
tests/cluster/: test_cli.py  test_core.py  test_examples.py  test_examples.sh  test_examples_python.py  test_examples_shell.py  test_guide.py  test_import.py  test_model.py
tests/cmd/: test_tail.py
tests/datasets/: test_loading.py  test_tutorials.py
tests/docs/: test_cli.py  test_functions.py  test_settings.py
tests/examples/: test_python.py  test_shell.py  test_shell.sh
tests/info/: test_cli.py  test_http.py
tests/io/: test_deltalake.py  test_file.py  test_iac.py  test_iceberg.py  test_sql.py  (+4 more)
(+286 files in other folders)
