[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[project]
name = "cratedb-toolkit"
description = "CrateDB Toolkit"
readme = "README.md"
keywords = [
  "cratedb",
  "data-processing",
  "data-retention",
  "toolkit",
]
license = { text = "AGPL 3, EUPL 1.2" }
authors = [
  { name = "Niklas Schmidtmer", email = "niklas@crate.io" },
  { name = "Marija Selakovic", email = "marija@crate.io" },
  { name = "Andreas Motl", email = "andreas.motl@crate.io" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Object Brokering",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Benchmark",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Hardware",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "attrs<25",
  "boltons<25",
  "cattrs<25",
  "click<9",
  "click-aliases<2,>=1.0.4",
  "colorama<1",
  "colorlog",
  "crash",
  "cratedb-sqlparse==0.0.10",
  'importlib-metadata; python_version < "3.8"',
  'importlib-resources; python_version < "3.9"',
  "orjsonl<2",
  "pympler<1.2",
  "python-dateutil<3",
  "python-dotenv<2",
  "python-slugify<9",
  "pyyaml<7",
  "sqlalchemy-cratedb>=0.40,<1",
  "sqlparse<0.6",
  "tqdm<5",
  'typing-extensions<5; python_version <= "3.7"',
  "vasuki==0.7.0",
  "verlib2==0.2",
  "yarl<1.19",
]
[project.optional-dependencies]
all = [
  "cratedb-toolkit[full,influxdb,mongodb]",
]
cfr = [
  "pandas<2.3",
  "polars<1.20",
  "pyarrow<18.2",
]
cloud = [
  "croud==1.13.0",
]
datasets = [
  "datasets<4",
  "kaggle<1.7",
]
develop = [
  "black[jupyter]<25",
  "mypy<1.15",
  "poethepoet<0.33",
  "pyproject-fmt<2.6",
  "ruff<0.9",
  "validate-pyproject<0.24",
]
docs = [
  "furo",
  "myst-parser[linkify]>=0.18,<5",
  "sphinx-autobuild==2021.3.14", # Newer versions stopped "watching" appropriately?
  "sphinx-copybutton",
  "sphinx-design-elements<1",
  "sphinxcontrib-mermaid<2",
  "sphinxext-opengraph<1",
]
dynamodb = [
  "boto3",
  "commons-codec>=0.0.20",
]
full = [
  "cratedb-toolkit[cfr,cloud,datasets,io,service]",
]
influxdb = [
  "cratedb-toolkit[io]",
  "influxio>=0.5,<1",
]
io = [
  "cr8",
  "dask[dataframe]>=2020",
  "fsspec[s3,http]",
  "pandas<2.3,>=1",
  "polars<1.20",
  "sqlalchemy>=2",
  "universal-pathlib<0.3",
]
kinesis = [
  "aiobotocore<2.18",
  "async-kinesis<1.2",
  "commons-codec>=0.0.20",
  "lorrystream[carabas]>=0.0.6",
]
mongodb = [
  "commons-codec[mongodb,zyp]>=0.0.21",
  "cratedb-toolkit[io]",
  "orjson<4,>=3.3.1",
  "pymongo<4.10,>=3.10.1",
  "python-bsonjs<0.6",
  "rich<14,>=3.3.2",
  "undatum<1.1",
]
pymongo = [
  "jessiql==1.0.0rc1",
  "pandas<2.2",
  "pymongo<4.9",
  "sqlalchemy<2",
]
release = [
  "build<2",
  "twine<7",
]
release-cfr = [
  "poethepoet<0.33",
  "pyinstaller<7",
]
service = [
  "fastapi<0.116",
  "uvicorn<0.35",
]
test = [
  "cratedb-toolkit[testing]",
  "httpx<0.29",
  "pueblo[dataframe]",
  "pytest<9",
  "pytest-cov<7",
  "pytest-mock<4",
  "responses<0.26",
  "testcontainers-azurite==0.0.1rc1",
  "testcontainers-localstack==0.0.1rc1",
  "testcontainers-minio==0.0.1rc1",
]
test-mongodb = [
  "cratedb-toolkit[test]",
  "testcontainers-mongodb==0.0.1rc1",
]
testing = [
  "testcontainers<5",
]
[project.urls]
Changelog = "https://github.com/crate/cratedb-toolkit/blob/main/CHANGES.md"
Documentation = "https://cratedb-toolkit.readthedocs.io/"
Homepage = "https://cratedb-toolkit.readthedocs.io/"
Issues = "https://github.com/crate/cratedb-toolkit/issues"
Repository = "https://github.com/crate/cratedb-toolkit"
[project.scripts]
cratedb-cfr = "cratedb_toolkit.cfr.cli:cli"
cratedb-retention = "cratedb_toolkit.retention.cli:cli"
cratedb-toolkit = "cratedb_toolkit.cli:cli"
cratedb-wtf = "cratedb_toolkit.wtf.cli:cli"
ctk = "cratedb_toolkit.cli:cli"
migr8 = "cratedb_toolkit.io.mongodb.cli:main"
[project.entry-points.pytest11]
cratedb_service = "cratedb_toolkit.testing.pytest"

[tool.black]
line-length = 120

[tool.coverage.run]
branch = false
omit = [
  "tests/*",
]
source = ["cratedb_toolkit"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.mypy]
packages = ["cratedb_toolkit"]
exclude = [
]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
non_interactive = true

[tool.pytest.ini_options]
addopts = """
  -rfEXs -p pytester --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  """
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
testpaths = [
  "examples",
  "cratedb_toolkit",
  "tests",
]
xfail_strict = true
markers = [
  "cfr",
  "examples",
  "dynamodb",
  "influxdb",
  "kinesis",
  "mongodb",
  "pymongo",
  "slow",
]

[tool.ruff]
line-length = 120

lint.select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # return
  "RET",
]

lint.extend-ignore = [
  # zip() without an explicit strict= parameter
  "B905",
  # df is a bad variable name. Be kinder to your future self.
  "PD901",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # Unnecessary `elif` after `return` statement
  "RET505",
  # Probable insecure usage of temporary file or directory
  "S108",
]

extend-exclude = [
  "amqp-to-mqtt.py",
  "workbench.py",
]

[tool.ruff.lint.per-file-ignores]
"doc/conf.py" = ["A001", "ERA001"]
"tests/*" = ["S101"]  # Allow use of `assert`, and `print`.
"tests/adapter/test_rockset.py" = ["E402"]
"tests/wtf/test_http.py" = ["E402"]
"examples/*" = ["T201", "T203"]  # Allow `print` and `pprint`
"cratedb_toolkit/retention/cli.py" = ["T201"]  # Allow `print`
"cratedb_toolkit/sqlalchemy/__init__.py" = ["F401"]  # Allow `module´ imported but unused

[tool.setuptools.packages.find]
namespaces = false


# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]

check = [
  "lint",
  "test",
]

docs-autobuild = [
  { cmd = "sphinx-autobuild --open-browser --watch influxio doc doc/_build" }
]
docs-html = [
  { cmd = "sphinx-build -W --keep-going doc doc/_build" }
]
docs-linkcheck = [
  { cmd = "sphinx-build -W --keep-going -b linkcheck doc doc/_build" }
]

format = [
  # Format project metadata.
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },

  # Format code.
  # Configure Ruff not to auto-fix a few items that are useful in workbench mode.
  # e.g.: unused imports (F401), unused variables (F841), `print` statements (T201), commented-out code (ERA001)
  { cmd = "ruff format" },
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001" },

  # Format examples.
  # Use `black` for the files in `examples/*`, because it knows how to treat Jupyter files well.
  { cmd = "black examples"},
]

lint = [
  { cmd = "ruff format --check" },
  { cmd = "ruff check" },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]

release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*" },
]

test = { cmd = "pytest" }

build-cfr = { cmd = "pyinstaller cratedb_toolkit/cfr/cli.py --onefile --name cratedb-cfr"}
